Changes in ActionLogic 1) New parameter `extra-version-file` for recording version to extra file 2) Fixes for security vulnerabilities in various dependencies

--- a/action.yml
+++ b/action.yml
@@ -36,7 +36,7 @@ inputs:
     required: false
   skip-push:
     description: 'If true, skip pushing any commits or tags created after the version bump'
-    default: false
+    default: 'false'
     required: false
   PACKAGEJSON_DIR:
     description: 'Custom dir to the package'
@@ -61,6 +61,10 @@ inputs:
   bump-policy:
     description: 'Set version bump ignore policy'
     default: 'all'
+    required: false
+  extra-version-file:
+    description: 'Prints new version to specified file'
+    default: ''
     required: false
   push:
     description: '[DEPRECATED] Set to false to skip pushing the new tag'
