--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,11 +19,13 @@ jobs:
         run: cat ./package.json
       - name: 'Automated Version Bump'
         id: version-bump
-        uses: 'phips28/gh-action-bump-version@master'
+        uses: 'SudevAtST/gh-action-bump-version@master'
         with:
           tag-prefix: 'v'
+          extra-version-file: 'version.info'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_USER: 'CI-System'
       - name: 'cat package.json'
         run: cat ./package.json
       - name: 'Output Step'
